Analysis using the new data.
A.0.0. The initial analysis contains plots for measures of the entire
data set. This was done to investigate if anything stands out.
The enviroments still look cooperative.

A.1. Is the analysis at the tournament level of different types.
Now we are ploting the transitions to C.

Everything is still in primary stage.

Last notebook contains the note to myself for
getting back.

The notes.tex contains some notes for the variables.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-data/
-.ipynb_checkpoints/
-
 # pycharm files
 .idea/*
 
+# notebooks`
+src/__pycache__/
+src/ignored nbs/*
+Example.ipynb
+*/.ipynb_checkpoints/*
+
+
+# data
+src/data_frame.csv
+src/df.csv
+src/data/*
+data/*
