--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,5 @@
 name: axlml
-channels: !!python/tuple
+channels:
 - defaults
 dependencies:
 - openssl=1.0.2j=0
@@ -14,11 +14,11 @@ dependencies:
 - zlib=1.2.8=3
 - pip:
   - appnope==0.1.0
-  - axelrod==1.14.0
+  - axelrod==3.0.0
   - cycler==0.10.0
   - decorator==4.0.10
   - entrypoints==0.2.2
-  - hypothesis==3.5.3
+  - hypothesis==3.11.3
   - ipykernel==4.5.0
   - ipython==5.1.0
   - ipython-genutils==0.1.0
@@ -29,36 +29,38 @@ dependencies:
   - jupyter-client==4.4.0
   - jupyter-console==5.0.0
   - jupyter-core==4.2.0
+  - jupyterthemes==0.15.0
+  - lesscpy==0.12.0
   - markupsafe==0.23
-  - matplotlib==1.5.3
+  - matplotlib==2.0.2
   - mistune==0.7.3
   - nbconvert==4.2.0
   - nbformat==4.1.0
   - notebook==4.2.3
-  - numpy==1.11.2
+  - numpy==1.13.0
   - pandas==0.19.1
   - pexpect==4.2.1
   - pickleshare==0.7.4
-  - prompt-toolkit==1.0.8
+  - prompt-toolkit==1.0.14
   - ptyprocess==0.5.1
   - pygments==2.1.3
-  - pyparsing==2.1.1
-  - python-dateutil==2.5.3
-  - pytz==2016.7
+  - pyparsing==2.2.0
+  - python-dateutil==2.6.0
+  - pytz==2017.2
   - pyzmq==16.0.0
   - qtconsole==4.2.1
-  - scipy==0.18.1
+  - scipy==0.19.0
   - seaborn==0.7.1
   - simplegeneric==0.8.1
   - six==1.10.0
   - spark-parser==1.4.0
   - terminado==0.6
   - tornado==4.4.2
-  - tqdm==3.4.0
+  - tqdm==4.14.0
   - traitlets==4.3.1
   - uncompyle6==2.9.3
   - wcwidth==0.1.7
   - widgetsnbextension==1.2.6
   - xdis==3.2.0
-prefix: /home/vince/anaconda3/envs/axlml
+prefix: /home/nightwing/anaconda3/envs/axlml
 
