--- a/environment.yml
+++ b/environment.yml
@@ -1,66 +1,87 @@
 name: axlml
 channels:
-- defaults
+  - defaults
 dependencies:
-- openssl=1.0.2j=0
-- pip=8.1.2=py35_0
-- python=3.5.2=0
-- readline=6.2=2
-- setuptools=27.2.0=py35_0
-- sqlite=3.13.0=0
-- tk=8.5.18=0
-- wheel=0.29.0=py35_0
-- xz=5.2.2=0
-- zlib=1.2.8=3
-- pip:
-  - appnope==0.1.0
-  - axelrod==3.0.0
-  - cycler==0.10.0
-  - decorator==4.0.10
-  - entrypoints==0.2.2
-  - hypothesis==3.11.3
-  - ipykernel==4.5.0
-  - ipython==5.1.0
-  - ipython-genutils==0.1.0
-  - ipywidgets==5.2.2
-  - jinja2==2.8
-  - jsonschema==2.5.1
-  - jupyter==1.0.0
-  - jupyter-client==4.4.0
-  - jupyter-console==5.0.0
-  - jupyter-core==4.2.0
-  - jupyterthemes==0.15.0
-  - lesscpy==0.12.0
-  - markupsafe==0.23
-  - matplotlib==2.0.2
-  - mistune==0.7.3
-  - nbconvert==4.2.0
-  - nbformat==4.1.0
-  - notebook==4.2.3
-  - numpy==1.13.0
-  - pandas==0.19.1
-  - pexpect==4.2.1
-  - pickleshare==0.7.4
-  - prompt-toolkit==1.0.14
-  - ptyprocess==0.5.1
-  - pygments==2.1.3
-  - pyparsing==2.2.0
-  - python-dateutil==2.6.0
-  - pytz==2017.2
-  - pyzmq==16.0.0
-  - qtconsole==4.2.1
-  - scipy==0.19.0
-  - seaborn==0.7.1
-  - simplegeneric==0.8.1
-  - six==1.10.0
-  - spark-parser==1.4.0
-  - terminado==0.6
-  - tornado==4.4.2
-  - tqdm==4.14.0
-  - traitlets==4.3.1
-  - uncompyle6==2.9.3
-  - wcwidth==0.1.7
-  - widgetsnbextension==1.2.6
-  - xdis==3.2.0
+  - openssl=1.0.2j
+  - python=3.5.2
+  - readline=6.2
+  - setuptools=27.2.0
+  - sqlite=3.13.0
+  - tk=8.5.18
+  - wheel=0.29.0
+  - xz=5.2.2
+  - zlib=1.2.8
+  - pip:
+    - atomicwrites==1.3.0
+    - attrs==19.1.0
+    - axelrod==4.5.0
+    - backcall==0.1.0
+    - click==7.0
+    - cloudpickle==1.0.0
+    - cycler==0.10.0
+    - dask==1.2.1
+    - dask-glm==0.2.0
+    - dask-ml==0.12.0
+    - decorator==4.3.0
+    - distributed==1.28.0
+    - heapdict==1.0.0
+    - imageio==2.5.0
+    - ipykernel==4.8.2
+    - ipython==6.3.1
+    - ipython-genutils==0.2.0
+    - jedi==0.12.0
+    - joblib==0.13.2
+    - jupyter-client==5.2.3
+    - jupyter-core==4.4.0
+    - kiwisolver==1.0.1
+    - lime==0.1.1.34
+    - llvmlite==0.28.0
+    - locket==0.2.0
+    - matplotlib==2.2.2
+    - more-itertools==7.0.0
+    - msgpack==0.6.1
+    - multipledispatch==0.6.0
+    - networkx==2.3
+    - numba==0.43.1
+    - numpy==1.14.2
+    - packaging==19.0
+    - pandas==0.24.2
+    - parso==0.2.0
+    - partd==0.3.10
+    - pathlib2==2.3.3
+    - pexpect==4.5.0
+    - pickleshare==0.7.4
+    - pillow==6.0.0
+    - pip==10.0.0
+    - pluggy==0.11.0
+    - prompt-toolkit==1.0.15
+    - psutil==5.6.2
+    - ptyprocess==0.5.2
+    - py==1.8.0
+    - pyarrow==0.8.0
+    - pydot==1.4.1
+    - pygments==2.2.0
+    - pyparsing==2.2.0
+    - pytest==4.4.1
+    - python-dateutil==2.7.2
+    - pytz==2018.4
+    - pywavelets==1.0.3
+    - pyyaml==5.1
+    - pyzmq==17.0.0
+    - scikit-image==0.15.0
+    - scikit-learn==0.21.0
+    - scipy==1.0.1
+    - seaborn==0.8.1
+    - simplegeneric==0.8.1
+    - six==1.11.0
+    - sortedcontainers==2.1.0
+    - tblib==1.4.0
+    - toolz==0.9.0
+    - tornado==5.0.2
+    - tqdm==4.31.1
+    - traitlets==4.3.2
+    - treeinterpreter==0.2.2
+    - wcwidth==0.1.7
+    - zict==0.1.4
 prefix: /home/nightwing/anaconda3/envs/axlml
 
