--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
   - python=3.6.7
   - pip:
-    - axelrod==4.5.0
+    - axelrod==3.0.0
     - dask==1.2.1
     - dask-glm==0.2.0
     - dask-ml==0.12.0
@@ -17,5 +17,7 @@ dependencies:
     - tornado==5.0.2
     - tqdm==4.31.1
     - treeinterpreter==0.2.2
+    - ipython==5.5.0
+    - prompt_toolkit== 1.0.0
 prefix: /home/nightwing/anaconda3/envs/axlml
 
