--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        os: [ubuntu-latest, macOS-latest]
-        python-version: [3.6, 3.7]
+        os: [ubuntu-latest]
+        python-version: [3.6]
 
     steps:
     - uses: actions/checkout@v1
