--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ dask-ml==0.12.0
 matplotlib==2.2.2
 numpy==1.14.2
 pandas==0.24.2
+jupyter==1.0.0
 pytest==4.4.1
 scipy==1.0.1
 seaborn==0.8.1
 tornado==5.0.2
 tqdm==4.31.1
 treeinterpreter==0.2.2
-ipython==5.5.0
-prompt_toolkit== 1.0.0
+ipython==5.0.0
+prompt_toolkit== 1.0.18
+statsmodels==0.11.1
+invoke==1.4.1
