--- a/environment.yml
+++ b/environment.yml
@@ -3,13 +3,13 @@ channels:
   - defaults
 dependencies:
   - python=3.6.7
+  - numpy==1.14.2
   - pip:
     - axelrod==3.0.0
     - dask==1.2.1
     - dask-glm==0.2.0
     - dask-ml==0.12.0
     - matplotlib==2.2.2
-    - numpy==1.14.2
     - pandas==0.24.2
     - jupyter==1.0.0
     - pytest==4.4.1
@@ -22,5 +22,6 @@ dependencies:
     - prompt_toolkit==1.0.18
     - statsmodels==0.11.1
     - invoke==1.4.1
+    - numba==0.48.0
 prefix: /home/nightwing/anaconda3/envs/axlml
 
