--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 axelrod==3.0.0
+numpy==1.14.2
+numba==0.48.0
 dask==1.2.1
 dask-glm==0.2.0
 dask-ml==0.12.0
 matplotlib==2.2.2
-numpy==1.14.2
 pandas==0.24.2
 jupyter==1.0.0
 pytest==4.4.1
