--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,19 @@ dask-worker-space/
 .coverage
 tests/__pycache__/*
 .vscode/*
+paper/arxiv
+
+__pycache__/
+data/raw_data.zip
+paper/si.bbl
+paper/si.blg
+paper/si.fdb_latexmk
+paper/si.fls
+paper/si.synctex.gz
+
+Reply/*txt
+Reply/*tex
+Reply/*bib
+*.bbl
+*.blg
+Reply/*.pdf
